    - iostat2pcp: fix off-by-one error in disk rawactive metrics
    - docs: corrections to pmdaperfevent man page
    - docs: add some missing text to pmGetConfig man page
    - docs: correct references to pre-v3 CC-BY-SA license
    - docs: update book builds for current Publican variants
    - docs: add derived metrics section to guide.html
    - build: fix dependency problems causing parallel make races
    - build: pcp containers build support via Makepkgs
    - build: ensure pmcollectl is installed, man page updates
    - build: correct rpm package dependency on pcp-libs version
    - build: disable autofsd-probe on (most) platforms, unneeded
    - build: allow pmdajson configure on/off build overrides
    - build: rework configure test for ps(1) output formats
    - build: install python-pcp in pcp-monitor container
    - build: get native Solaris builds going again
    - build: get native Illumos builds going again
    - build: get native Windows builds going again

pcp-3.10.5 (15 June 2015)
    - packaging: rebuild pmns in %post in fedora.spec
    - build: changes for SUSE SLES 12
    - ds389log: fixes to match updated logconv.pl
    - build: realpath not needed, and not there on older platforms
    - build: fix configure typo causing accidental books build
    - packaging: fedora spec updates to be more consistent with Makepkgs
    - build: add ppc64le to rpm 64bit lib macro list
    - libpcp: pmdaCache: hash determinism across compilers/platforms
    - pmda proc: Proc metrics depend on page size
    - pcp-atop: fix folio recording replay with DM indom
    - pcp-atop: fix bounds checking on disk names (valgrind)
    - pmdaproc.sh: ensure pmloggers not started if disabled
    - json pmda: tolerate json array instances that are missing
    - pmnewlog: usage tweaks
    - packaging, build: json pmda: make build and packaging conditional
    - configure: add /bin/sh as possible pid==1 candidate
    - pmlogger: initialize linger