@@ -289,16 +289,6 @@ as the data repository, and Graphites web interface renders it. The
 Carbon and Whisper subsystems of Graphite are not included nor used.
 %endif
 
-#%package enable-default
-#License: LGPLv2+
-#Group: Development/System
-#Summary: Performance Co-Pilot (PCP) Auto-Start Subrpm
-#URL: http://www.pcp.io
-#Requires: pcp = @package_version@ pcp-libs = @package_version@
-
-#%description -n pcp-enable-default
-#A PCP sub-rpm in which to automatically start the pmcd and pmlogger services
-
 #
 # perl-PCP-PMDA. This is the PCP agent perl binding.
 #
@@ -1456,8 +1446,10 @@ Requires: pcp-pmda-rpm
 %endif
 Requires: pcp-pmda-summary pcp-pmda-trace pcp-pmda-weblog
 %description collector
-This package contains the PCP metric collection dependencies.  This includes
-all possible packages used to collect PCP metrics.
+This meta-package installs the PCP metric collection dependencies.  This
+includes the vast majority of packages used to collect PCP metrics.  The
+pcp-collector package also automatically enables and starts the pmcd and
+pmlogger services.
 # collector
 
 # pcp-monitor metapackage
@@ -1476,8 +1468,8 @@ Requires: pcp-system-tools
 Requires: pcp-gui
 %endif
 %description monitor
-This package contains the PCP metric monitoring dependencies. This includes all possible packages used
-to monitor PCP metrics in various ways.
+This meta-package contains the PCP performance monitoring dependencies.  This
+includes a large number of packages for analysing PCP metrics in various ways.
 # monitor
 
 %prep
